app/kube/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: microcoders-nginx
  namespace: microcoders
  labels:
    app: microcoders-nginx

spec:
  replicas: 1
  selector:
    matchLabels:
      app: microcoders-nginx
  template:
    metadata:
      labels:
        app: microcoders-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: microcoders-nginx
