app/kube/nginx/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: microcoders-nginx
  namespace: microcoders

spec:
  selector:
    app: microcoders-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
